--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./app/mod/mod.sln
     - name: Build
       run: dotnet build ./app/mod/mod.sln --no-restore
     - name: Test
